--- a/sass/public/css/index.html
+++ b/sass/public/css/index.html
@@ -15,7 +15,7 @@
      <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
   	 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-     <link href="main.css" rel="stylesheet">
+     <link href="main.css" rel="stylesheet" type="text/css">
      <!--[if lt IE 9]>
        <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
      <![endif]-->
