--- a/sass/index.html
+++ b/sass/index.html
@@ -15,7 +15,7 @@
      <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
   	 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-     <link href="main.css" rel="stylesheet" type="text/css">
+     <link href="css/main.css" rel="stylesheet" type="text/css">
      <!--[if lt IE 9]>
        <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
      <![endif]-->
@@ -66,7 +66,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="main.js" type="text/javascript"></script>
+  <script src="assets/main.js" type="text/javascript"></script>
 
  </body>
 
