--- a/sass/index.html
+++ b/sass/index.html
@@ -15,7 +15,7 @@
      <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
   	 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-     <link href="css/main.css" rel="stylesheet" type="text/css">
+     <link href="assets/styles/main.css" rel="stylesheet" type="text/css">
      <!--[if lt IE 9]>
        <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
      <![endif]-->
@@ -26,42 +26,50 @@
 
 <main>
 
-   <section id="main-box">
+   <div class='spacer'></div>
+
+   <section class="main-box">
       <div class="container">
        	<div class="row">
-         <div id="sub-box">
            <div class="col-md-4 col-md-offset-4 input-group text-center">
-             <h2 class="text-center">Twitch TV JSON API</h2>
-            </div><!-- .col-md-4 .col-md-offset-4 -->
-          </div><!-- #sub-box -->
+             <h1 class="text-center">
+               Twitch TV JSON API
+             </h1>
+
+             <h3 class="text-center">
+               Free Code Camp
+             </h3>
+
+           </div><!-- .col-md-4 .col-md-offset-4 -->
         </div><!-- .row -->
       </div><!-- .container -->
-   </section><!-- #main-box -->
+   </section><!-- .main-box -->
 
+   <div class="spacer"></div>
 
-      <section id="sub-main-box">
+      <section class="main-box">
          <div class="container">
           	<div class="row">
             <div id="sub-box">
-              <div class='spacer'></div>
+              <div class="spacer"></div>
 
-                <div class='block'>
-                  <div class='row'>
-                    <div class='col-md-4' id='user'>
+                  <div class="row">
+                    <div class="col-md-4 info" id="user">
                       User:<br>
                     </div>
-                    <div class='col-md-4' id='status'>
+                    <div class="col-md-4 info" id="status">
                       Status:<br>
                     </div>
-                    <div class='col-md-4' id='game'>
+                    <div class="col-md-4 info" id="game">
                       Game:<br>
                     </div>
-                  </div>
 
              </div><!-- #sub-box -->
            </div><!-- .row -->
          </div><!-- .container -->
-      </section><!-- #main-box -->
+      </section><!-- .main-box -->
+
+      <div class='spacer'></div>
 </main>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
