Called Stream ajax and created its function.

--- a/sass/index.html
+++ b/sass/index.html
@@ -40,6 +40,10 @@
                Free Code Camp
              </h3>
 
+             <a href="https://www.twitch.tv/freecodecamp" target="blank">
+               <h3 id="fccStatus" class="text-center"></h3>
+             </a>
+
            </div><!-- .col-md-4 .col-md-offset-4 -->
         </div><!-- .row -->
       </div><!-- .container -->
